Fixed top nav overflow scrolling in mobile

--- a/css/mobileLandscape.css
+++ b/css/mobileLandscape.css
@@ -19,6 +19,10 @@
 	height:0px;
 }
 
+.container {
+	overflow:hidden;
+}
+
 h1 {
 	font-size:1.75rem;
 	line-height:30px;
